--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "version": "3.0.0",
-  "name": "kong's blog",
+  "name": "kongs blog",
   "description": "devel or game or something else",
   "main": "n/a",
   "scripts": {
